--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,29 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HARVEY AARON</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-  <h1>yo</h1>
+    <header>
+        <h1 class="glow">Harvey Aaron</h1>
+        <p>balla</p>
+    </header>
+    <section id="about">
+        <h2 class="glow">About Me</h2>
+        <p>ima balla</p>
+    </section>
+    <section id="projects">
+        <h2 class="glow">Projects</h2>
+        <div class="project">
+            <h3 class="glow">balla projex 1</h3>
+            <p>yeeyyeye</p>
+        </div>
+    </section>
+    <footer>
+        <p>Contact: harveya456@gmail.com</p>
+    </footer>
 </body>
+</html>   
