update to use vite

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
         <h2 class="glow">Projects</h2>
         <div class="project">
             <h3 class="glow">balla projex 1</h3>
+            <button id="myButton">Click me</button>
+            <div id="output"></div>
+            <script src="./index.js"></script>   
             <p>yeeyyeye</p>
         </div>
     </section>
